# didi

./: Cargo.toml  install.zsh
scripts/: didi.zsh
src/: app.rs  db.rs  main.rs  parser.rs
src/app/: db.rs  parser.rs  utils.rs
src/app/db/: query.rs
