[package]
name = "didi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
rusqlite ={ version = "0.40.1", features = ["bundled"]}
time = { version = "0.3.51", features = ["formatting", "parsing", "macros"] }
